#                                                                                          #
#                                      Changelog                                           #
#                                                                                          #
############################################################################################

[38] --> [Censor] Update vulgar slang.
[37] --> Reset Duel Cooldowns, Hp, Mana, Rage and Runic Power in Astranaar.
[36] --> [Censor] Update vulgar slang.
[35] --> Add Admin Announce Command.
[34] --> GM Account can chat at 2 faction.
[33] --> Add script Allow Two Side Interaction Chat.
[32] --> Add Armory Patch.
[31] --> Fix crash script Chat Censure.
[30] --> Add script Chat Censure.
[29] --> [Gundrak] Changes:
                    - Fix Drakkari Elemental.
                   by Thainification.
[28] --> [ICC] Changes:
                - Dark nucleus lose aggro without a reason.
                - Svalna & Crok: add spell Divine Surge, try to fix position problem, misc...
	           by Thainification.
[27] --> Fix player on transports.
[26] --> Fix Pick Lock.
[25] --> Fix pet not returning on target death by other player.
[24] --> Add Updated external mail.
[23] --> Add script Transmogrification.
[22] --> Fix Lifebloom.
[21] --> Project Astranaar.
[20] --> Now priest is energized for each Power Word: Shield that is absorbed or dispelled.
[19] --> [ICC] Big Changes:
               Blood Prince Council:
                - Shadow prison should only hit player.
                - Try to relocate dark nucleus position if spawned out of LoS.
                - Dark nucleus now should follow current target.
                - Properly clear Kinetic Bomb MotionMaster before given new one.
               Professor Putricide:
                - Changed ooze target searching intervals & change amount of stacks.
                - Ooze change target if current target died before explosion.
               Rotface: