@@ -1077,6 +1077,7 @@ enum TrinityStrings
     // Use for custom patches             11000-11999
     LANG_AUTO_BROADCAST                 = 11000,
     LANG_INVALID_REALMID                = 11001,
+    LANG_BAN_CHEATER                    = 11002,
 
     LANG_ANNOUNCE_ADMIN_COLOR           = 11666,
 
