@@ -166,6 +166,7 @@ enum WorldBoolConfigs
     CONFIG_QUEST_IGNORE_AUTO_COMPLETE,
     CONFIG_WARDEN_ENABLED,
     CONFIG_ANTICHEAT_ENABLE,
+    CONFIG_BAN_PLAYER,
     CONFIG_EXTERNAL_MAIL,
     CONFIG_ARMORY_ENABLE,
     CONFIG_WINTERGRASP_ENABLE,
